# slash

./: .gitignore  .impeccable.md  Draft.md  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/slash_api/: main.py  state.py
apps/api/slash_api/audit/: __init__.py  writer.py
apps/api/slash_api/capability/: __init__.py  dsl.py  executor.py  loader.py
apps/api/slash_api/hitl/: __init__.py  store.py
apps/api/slash_api/llm/: __init__.py  client.py  divergence.py  prompts.py
apps/api/slash_api/parser/: __init__.py  errors.py  lexer.py  parser.py
apps/api/slash_api/registry/: __init__.py  loader.py
apps/api/slash_api/routers/: approvals.py  audit.py  context.py  execute.py  explain.py  help.py  parse.py  skills.py
apps/api/slash_api/runtime/: __init__.py  builder.py  builtins.py  executor.py  output.py  profile.py
apps/api/tests/: test_approval_flow.py  test_audit.py  test_capability_dsl.py  test_harness.py  test_health.py  test_help.py  test_lexer.py  test_parser.py  test_registry.py  test_rollback.py  test_runner.py
apps/api/var/: audit.jsonl
audit-journal/: README.md
docs/: 00-README.md  01-product-spec.md  01-spec.md  02-command-reference.md  02-commands.md  03-architecture.md  04-skills-system.md  04-skills.md  05-safety-audit.md  05-security-audit.md  06-ui-ux-design.md  06-ui.md  06b-visual-system.md  07-acceptance.md  07-roadmap.md  08-capabilities-scenarios.md  09-capabilities.md  10-scenarios.md
providers/: README.md  _capabilities.yaml
scripts/: slash-up
skills/: README.md
(+186 files in other folders)
